# Start_Up_Backend

./: Dockerfile  README.md  docker-compose.yml  encode.py  pyproject.toml  requirements.txt
app/: app.py  config.py  main.py  pyproject.toml
app/admin/: bot.py
app/auth/: database.py
app/routers/: cart.py  favorites.py  food.py  order.py  payment.py  routers.py  sbis.py  user.py
app/templates/: payment.html
migrations/: env.py
scripts/: prestart.sh
