[project]
name = "kimchistop"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiogram>=3.15.0",
    "aiohttp>=3.10.11",
    "alembic>=1.14.0",
    "asyncpg>=0.30.0",
    "email-validator>=2.2.0",
    "fastapi-cli>=0.0.5",
    "fastapi-users-db-sqlalchemy>=6.0.1",
    "fastapi-users>=14.0.0",
    "fastapi[standard]>=0.115.5",
    "psycopg2-binary>=2.9.10",
    "redis>=5.2.0",
    "sqlalchemy>=2.0.36",
    "uvicorn>=0.32.1",
    "greenlet>=3.1.1",
    "gunicorn>=23.0.0",
    "httpx>=0.28.0",
    "jinja2>=3.1.4",
    "mako>=1.3.6",
    "pydantic>=2.9.2",
    "python-dotenv>=1.0.1",
    "requests>=2.32.3",
    "shellingham>=1.5.4",
    "websockets>=14.1",
    "yookassa>=3.4.1",
    "sqlmodel>=0.0.22",
    "tenacity>=9.0.0",
    "scalar-fastapi>=1.0.3",
    "pillow>=11.0.0",
]

[tool.uv.workspace]
members = ["app"]
